<resources>
    <string name="app_name">Infogram</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="button_text">LOGIN</string>
    <string name="no_tienes_cuenta">" ¿no_tienes_cuenta? "</string>
    <string name="crea_una_aqui">crea una aqui</string>
    <string name="correo">correo</string>
    <string name="Nombre" translatable="false">Nombre</string>
    <string name="Correo">Correo</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Confirme_Contraseña">Confirme_Contraseña</string>
    <string name="button_text_create_acccount">UNETE</string>
    <string name="Button_texT">LOGIN</string>
    <string name="Button_text">LOGIN</string>
    <string name="titulo_crear_cuenta">\"crer cuenta \"</string>
    <string name="carlos_vargas_cardview" translatable="false">Carlos_vargas</string>
    <string name="hace_cardview">hace_cardview</string>
    <string name="dias_cardview"> " 4 dias"</string>
    <string name="me_gusta_cardview">10 me gusta</string>
</resources>